vlib/v/checker/tests/array_map_fn_err_b.vv
fn add(a string) string {
	return a
}
fn main() {
	a := [1,2,3,4].map(add)
	println(a)
}
